When setting window size, take into account when menubar is not visible

Take into account menubar visibility when sizing a new window.
Note that this is only used when 'Use current window size on next
startup' is unchecked.

Thanks to Roman Gilg subdiff gmail com for patch

BUG: 359662
REVIEW: 27803