src/MainWindow.cpp
@@ -823,6 +823,8 @@ void MainWindow::showEvent(QShowEvent* aEvent)
         menuBar()->setVisible(_menuBarInitialVisibility);
         _toggleMenuBarAction->setChecked(_menuBarInitialVisibility);
         _menuBarInitialVisibilityApplied = true;
+        if(!KonsoleSettings::saveGeometryOnExit())
+            resize(sizeHint());
     }
 
     // Call parent method
